COMMERCE-6187 users nested field for organizations

--- a/modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
@@ -343,6 +343,10 @@ components:
                                 type: string
                         type: object
                     type: array
+                userAccounts:
+                    items:
+                        $ref: "#/components/schemas/UserAccount"
+                    type: array
             type: object
         OrganizationBrief:
             description:
