COMMERCE-6188 users nested field for account

--- a/modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
@@ -5,6 +5,12 @@ components:
             description:
                 An account represents an external account, for example a customer business.
             properties:
+                accountUserAccounts:
+                    description:
+                        The users linked to the account
+                    items:
+                        $ref: "#/components/schemas/UserAccount"
+                    type: array
                 actions:
                     additionalProperties:
                         additionalProperties:
