LPS-136297 Add CustomElementsPortletDescriptor administration portlet

--- a/modules/apps/custom-elements/custom-elements-web/src/main/resources/content/Language.properties
+++ b/modules/apps/custom-elements/custom-elements-web/src/main/resources/content/Language.properties
@@ -1,3 +1,9 @@
+add-custom-elements-portlet-descriptor=Add Custom Element Portlet
 add-custom-elements-source=Add Custom Element
+css-urls=CSS URLs
+css-urls-help=One URL pointing to a CSS file per line
 html-element-name=HTML Element Name
+instanceable=Instanceable
 javax.portlet.title.com_liferay_custom_elements_web_internal_portlet_CustomElementsPortlet=Custom Elements
+javax.portlet.title.com_liferay_custom_elements_web_internal_portlet_CustomElementsPortletDescriptorPortlet=Custom Element Portlets
+properties-help=One 'attribute=value' pair per line (using Java Properties syntax)
