--- a/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language.properties
@@ -9,6 +9,7 @@ diagram-pin=Diagram Pin
 diagram-settings=Diagram Settings
 linked-to-diagram=Linked to Diagram
 linked-to-sku=Linked to SKU
+mapped-products=Mapped Products
 no-diagram-is-loaded=No diagram is loaded.
 reset-zoom=Reset Zoom
 select-color=Select Color
