COMMERCE-7076 commerce-shop-by-diagram-web added new labels

--- a/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language.properties
+++ b/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language.properties
@@ -11,9 +11,12 @@ linked-to-diagram=Linked to Diagram
 linked-to-sku=Linked to SKU
 mapped-products=Mapped Products
 no-diagram-is-loaded=No diagram is loaded.
+pos=Pos
+qty=Qty
 reset-zoom=Reset Zoom
 select-color=Select Color
 select-radius=Select Radius
 select-sku=Select SKU
+sku-or-diagram=SKU or Diagram
 svg=SVG
 type-sku=Type SKU
